--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friends - Kokoa Clone</title>
+  <title>Chats - Kokoa Clone</title>
 </head>
 <body>
   <div class="status-bar">
@@ -24,49 +24,27 @@
   </div>
 
   <header class="screen-header">
-    <h1 class="screen-header__title">Friends</h1>
+    <h1 class="screen-header__title">Chats</h1>
     <div class="screen-header__icons">
       <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+      <span><i class="fa-solid fa-comment-dots fa-lg"></i></i></span>
       <span><i class="fa-solid fa-music fa-lg"></i></span>
       <span><i class="fa-solid fa-gear fa-lg"></i></span>
     </div>
   </header>
 
-  <a id="friends-display-link">
-    <i class="fa-solid fa-circle-info fa-sm"></i>
-    Friends'Names Display
-    <i class="fa-solid fa-chevron-right fa-xs"></i>
-  </a>
-
-  <main class="friends-screen">
+  <main class="main-screen">
     <div class="user-component">
       <div class="user-component__column">
-        <img src="profile.jpg" class="user-component__avatar user-component__avatar--xl">
+        <img src="profile.jpg" class="user-component__avatar user-component__avatar">
         <div class="user-component__text">
-          <h4 class="user-component__title">user</h4>
-          <!-- <h6 class="user-component_subtitle">this is textarea</h6> -->
+          <h4 class="user-component__title">Kokoa</h4>
+          <h6 class="user-component_subtitle">Please check My Kokoa Account Info</h6>
         </div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
-    <div class="friends-screen__chanel">
-      <div class="friends-screen__chanel__channel-header">
-        <span>Channel</span>
-        <i class="fa-solid fa-chevron-up fa-xs"></i>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="profile.jpg" class="user-component__avatar user-component__avatar--sm">
-          <div class="user-component__text">
-            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <div>
-            <span>2</span>
-            <i class="fa-solid fa-chevron-right fa-xs"></i>
-          </div>
-        </div>
+      <div class="user-component__column">
+        <span class="user-component__time">21:22</span>
+        <div class="badge">1</div>
       </div>
     </div>
   </main>
@@ -74,18 +52,19 @@
   <nav class="nav">
     <ul class="nav__ul">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
+          <a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"></i></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-regular fa-comment fa-2x"></i>
+            <i class="fa-solid fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
         <li class="nav__btn"><a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
     </ul>
   </nav>
+
 
   <script src="https://kit.fontawesome.com/d07af470f5.js" crossorigin="anonymous"></script>
 </body>
