--- a/chats.html
+++ b/chats.html
@@ -36,7 +36,7 @@
   <main class="main-screen">
     <div class="user-component">
       <div class="user-component__column">
-        <img src="profile.jpg" class="user-component__avatar user-component__avatar">
+        <img src="img/channel.jpg" class="user-component__avatar user-component__avatar">
         <div class="user-component__text">
           <h4 class="user-component__title">Kokoa</h4>
           <h6 class="user-component_subtitle">Please check My Kokoa Account Info</h6>
