--- a/find.html
+++ b/find.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Find - Kokoa Clone</title>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
   <div class="status-bar">
@@ -24,27 +25,69 @@
   </div>
 
   <header class="screen-header">
-    <h1 class="screen-header__title">Chats</h1>
+    <h1 class="screen-header__title">Find</h1>
     <div class="screen-header__icons">
       <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-      <span><i class="fa-solid fa-comment-dots fa-lg"></i></i></span>
-      <span><i class="fa-solid fa-music fa-lg"></i></span>
       <span><i class="fa-solid fa-gear fa-lg"></i></span>
+      <div class="dot"></div>
     </div>
   </header>
 
   <main class="main-screen">
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="profile.jpg" class="user-component__avatar user-component__avatar">
-        <div class="user-component__text">
-          <h4 class="user-component__title">Kokoa</h4>
-          <h6 class="user-component_subtitle">Please check My Kokoa Account Info</h6>
+    <div class="find-icons">
+        <div class="find-icons__icon"><i class="ri-qr-scan-2-line ri-2x"></i><span>QR Code</span></div>
+        <div class="find-icons__icon"><i class="ri-contacts-book-line ri-2x"></i><span>Add by<br>Contacts</span></div>
+        <div class="find-icons__icon"><i class="fa-solid fa-fingerprint fg-2x"></i><span>Add by ID</span></div>
+        <div class="find-icons__icon"><i class="ri-mail-line ri-2x"></i><span>Invite</span></div>
+    </div>
+    <div class="recommended-friends">
+      <h6 class="recommended-friends__title">Recommended Friends</h6>
+      <span>You have no recommended friends.</span>
+    </div>
+    <div class="open-chat">
+      <div class="open-chat__header">
+        <h4 class="open-chat__title">Open Chat</h4>
+        <span>Go to Openchat Home<i class="fa-solid fa-chevron-right fa-xs"></i></span>
+      </div>
+      <div class="open-post">
+        <div class="open-post__column">
+          <h5 class="open-post__title">NONGDAMGOM</h5>
+          <h6 class="open-post__hashtags">#nagano#nongdamgom#cute</h6>
+          <div class="open-post__members">
+            <img src="img/open-chat_group-member-imge_1.png">
+            <span class="open-post__members-count">802 members</span>
+            <div class="divider"></div>
+            <span class="open-post__members-status">Active</span>
+          </div>
+        </div>
+        <div class="open-post__column">
+          <div class="open-post__group">
+            <img src="img/open-chat_group-imge_1.png">
+            <div class="open-post__heart-count">
+              <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="user-component__column">
-        <span class="user-component__time">21:22</span>
-        <div class="badge">1</div>
+      <div class="open-post">
+        <div class="open-post__column">
+          <h5 class="open-post__title">CINNAMOROLL</h5>
+          <h6 class="open-post__hashtags">#sanrio#cinnamoroll#cute</h6>
+          <div class="open-post__members">
+            <img src="img/open-chat_group-member-imge_2.jpg">
+            <span class="open-post__members-count">802 members</span>
+            <div class="divider"></div>
+            <span class="open-post__members-status">Active</span>
+          </div>
+        </div>
+        <div class="open-post__column">
+          <div class="open-post__group">
+            <img src="img/open-chat_group-imge_2.png">
+            <div class="open-post__heart-count">
+              <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
@@ -57,7 +100,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-solid fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
