--- a/friends.html
+++ b/friends.html
@@ -41,7 +41,7 @@
   <main class="friends-screen">
     <div class="user-component">
       <div class="user-component__column">
-        <img src="profile.jpg" class="user-component__avatar user-component__avatar--xl">
+        <img src="img/profile.jpg" class="user-component__avatar user-component__avatar--xl">
         <div class="user-component__text">
           <h4 class="user-component__title">user</h4>
           <!-- <h6 class="user-component_subtitle">this is textarea</h6> -->
@@ -56,7 +56,7 @@
       </div>
       <div class="user-component">
         <div class="user-component__column">
-          <img src="profile.jpg" class="user-component__avatar user-component__avatar--sm">
+          <img src="img/channel.jpg" class="user-component__avatar user-component__avatar--sm">
           <div class="user-component__text">
             <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
           </div>
