--- a/find.html
+++ b/find.html
@@ -28,17 +28,17 @@
     <h1 class="screen-header__title">Find</h1>
     <div class="screen-header__icons">
       <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-      <span><i class="fa-solid fa-gear fa-lg"></i></span>
+      <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
       <div class="dot"></div>
     </div>
   </header>
 
   <main class="main-screen">
-    <div class="find-icons">
-        <div class="find-icons__icon"><i class="ri-qr-scan-2-line ri-2x"></i><span>QR Code</span></div>
-        <div class="find-icons__icon"><i class="ri-contacts-book-line ri-2x"></i><span>Add by<br>Contacts</span></div>
-        <div class="find-icons__icon"><i class="fa-solid fa-fingerprint fg-2x"></i><span>Add by ID</span></div>
-        <div class="find-icons__icon"><i class="ri-mail-line ri-2x"></i><span>Invite</span></div>
+    <div class="icon-row">
+        <div class="icon-row__icon"><i class="ri-qr-scan-2-line ri-2x"></i><span>QR Code</span></div>
+        <div class="icon-row__icon"><i class="ri-contacts-book-line ri-2x"></i><span>Add by<br>Contacts</span></div>
+        <div class="icon-row__icon"><i class="fa-solid fa-fingerprint fg-2x"></i><span>Add by ID</span></div>
+        <div class="icon-row__icon"><i class="ri-mail-line ri-2x"></i><span>Invite</span></div>
     </div>
     <div class="recommended-friends">
       <h6 class="recommended-friends__title">Recommended Friends</h6>
