--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chats - Kokoa Clone</title>
+  <title>More - Kokoa Clone</title>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
   <div class="status-bar">
@@ -24,29 +25,17 @@
   </div>
 
   <header class="screen-header">
-    <h1 class="screen-header__title">Chats</h1>
+    <h1 class="screen-header__title">Settings</h1>
     <div class="screen-header__icons">
       <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-      <span><i class="fa-solid fa-comment-dots fa-lg"></i></i></span>
       <span><i class="fa-solid fa-music fa-lg"></i></span>
       <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
+      <div class="dot-more"></div>
     </div>
   </header>
 
-  <main class="main-screen">
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="img/channel.jpg" class="user-component__avatar user-component__avatar">
-        <div class="user-component__text">
-          <h4 class="user-component__title">Kokoa</h4>
-          <h6 class="user-component_subtitle">Please check My Kokoa Account Info</h6>
-        </div>
-      </div>
-      <div class="user-component__column">
-        <span class="user-component__time">21:22</span>
-        <div class="badge">1</div>
-      </div>
-    </div>
+  <main class="main-screen more-screen">
+
   </main>
 
   <nav class="nav">
@@ -57,7 +46,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-solid fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
