--- a/chats.html
+++ b/chats.html
@@ -14,10 +14,10 @@
       <i class="fa-solid fa-wifi"></i>
     </div>
     <div class="status-bar__column">
-      <span>18:43</span>
+      <span>21:30</span>
     </div>
     <div class="status-bar__column">
-      <span>11%</span>
+      <span>100%</span>
       <i class="fa-solid fa-battery-full"></i>
       <i class="fa-solid fa-bolt"></i>
     </div>
@@ -34,19 +34,21 @@
   </header>
 
   <main class="main-screen">
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="img/channel.jpg" class="user-component__avatar user-component__avatar">
-        <div class="user-component__text">
-          <h4 class="user-component__title">Kokoa</h4>
-          <h6 class="user-component_subtitle">Please check My Kokoa Account Info</h6>
+    <a href="chat.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img src="img/profile2.jpg" class="user-component__avatar user-component__avatar">
+          <div class="user-component__text">
+            <h4 class="user-component__title">Pompompurin</h4>
+            <h6 class="user-component_subtitle">Hi!</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">21:22</span>
+          <div class="badge">1</div>
         </div>
       </div>
-      <div class="user-component__column">
-        <span class="user-component__time">21:22</span>
-        <div class="badge">1</div>
-      </div>
-    </div>
+    </a>
   </main>
 
   <nav class="nav">
@@ -64,6 +66,10 @@
         <li class="nav__btn"><a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
     </ul>
   </nav>
+
+  <div id="no-mobile">
+    <span>Your screen is too big</span>
+  </div>
 
 
   <script src="https://kit.fontawesome.com/d07af470f5.js" crossorigin="anonymous"></script>
