--- a/friends.html
+++ b/friends.html
@@ -14,10 +14,10 @@
       <i class="fa-solid fa-wifi"></i>
     </div>
     <div class="status-bar__column">
-      <span>18:43</span>
+      <span>21:30</span>
     </div>
     <div class="status-bar__column">
-      <span>11%</span>
+      <span>100%</span>
       <i class="fa-solid fa-battery-full"></i>
       <i class="fa-solid fa-bolt"></i>
     </div>
@@ -56,7 +56,7 @@
       </div>
       <div class="user-component">
         <div class="user-component__column">
-          <img src="img/channel.jpg" class="user-component__avatar user-component__avatar--sm">
+          <img src="img/profile2.jpg" class="user-component__avatar user-component__avatar--sm">
           <div class="user-component__text">
             <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
           </div>
@@ -86,6 +86,13 @@
         <li class="nav__btn"><a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
     </ul>
   </nav>
+  <div id="splash-screen">
+    <i class="fa-solid fa-comment fa-2x"></i>
+  </div>
+
+  <div id="no-mobile">
+    <span>Your screen is too big</span>
+  </div>
 
   <script src="https://kit.fontawesome.com/d07af470f5.js" crossorigin="anonymous"></script>
 </body>
