--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <i class="fa-solid fa-wifi"></i>
     </div>
     <div class="status-bar__column">
-      <span>18:43</span>
+      <span>21:30</span>
     </div>
     <div class="status-bar__column">
-      <span>11%</span>
+      <span>100%</span>
       <i class="fa-solid fa-battery-full"></i>
       <i class="fa-solid fa-bolt"></i>
     </div>
@@ -34,6 +34,10 @@
     <input type="submit" value="Log in">
     <a href="#">Find Kokoa Account or Password</a>
   </form>
+
+  <div id="no-mobile">
+    <span>Your screen is too big</span>
+  </div>
 
   <script src="https://kit.fontawesome.com/d07af470f5.js" crossorigin="anonymous"></script>
 </body>
