--- a/more.html
+++ b/more.html
@@ -15,10 +15,10 @@
       <i class="fa-solid fa-wifi"></i>
     </div>
     <div class="status-bar__column">
-      <span>18:43</span>
+      <span>21:30</span>
     </div>
     <div class="status-bar__column">
-      <span>11%</span>
+      <span>100%</span>
       <i class="fa-solid fa-battery-full"></i>
       <i class="fa-solid fa-bolt"></i>
     </div>
@@ -84,6 +84,10 @@
         <li class="nav__btn"><a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
     </ul>
   </nav>
+
+  <div id="no-mobile">
+    <span>Your screen is too big</span>
+  </div>
 
 
   <script src="https://kit.fontawesome.com/d07af470f5.js" crossorigin="anonymous"></script>
